[package]
name = "bosminer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tonic = "0.9.2"

[build-dependencies]
git2 = { version = "0.17.2", features = ["vendored-libgit2"] }
protobuf-src = "1.1.0"
tonic-build = "0.9.2"
walkdir = "2.3.3"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
